# TER_2019

./: .gitignore  README.md  install.sh  install_modbus.sh
MONTRAC/catkin_ws/: build.sh
MONTRAC/catkin_ws/devel/include/aiguillages/: Actionneurs.h  Capteurs.h  ExchangeSh.h  Msg_SensorState.h
MONTRAC/catkin_ws/devel/include/automates/: Entrees.h  Sorties.h
MONTRAC/catkin_ws/devel/include/commande/: Actionneurs.h  Capteurs.h  bool_stateResponse.h
MONTRAC/catkin_ws/devel/include/commande_locale/: Actionneurs.h  Capteurs.h  DeplacerPieceMsg.h  Msg_AddProduct.h  Msg_Color.h  Msg_Erreur.h  Msg_PinControl.h  Msg_SensorState.h  Msg_StopControl.h  Msg_SwitchControl.h  RobotJoints.h  SrvAddProduct.h  SrvAddProductPushBack.h  SrvAddProductPushBackRequest.h  SrvAddProductPushBackResponse.h  SrvAddProductRequest.h  SrvAddProductResponse.h  SrvFinInit.h  SrvFinInitRequest.h  SrvFinInitResponse.h  TacheFinieMsg.h
MONTRAC/catkin_ws/devel/include/commande_plc/: actuators.h  sensors.h
MONTRAC/catkin_ws/devel/include/plc_in/: inputsRequest.h
MONTRAC/catkin_ws/devel/include/plc_out/: outputs.h  outputsRequest.h
MONTRAC/catkin_ws/devel/include/robots/: FaireTacheMsg.h  MoveRobot.h  Msg_numrobot.h
MONTRAC/catkin_ws/devel/include/shuttles/: Msg_Erreur.h  msgShuttleChange.h  msgShuttleCreate.h  shuttle_id.h  (+2 more)
MONTRAC/catkin_ws/src/aiguillages/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/aiguillages/msg/: ExchangeSh.msg  Msg_SensorState.msg
MONTRAC/catkin_ws/src/aiguillages/src/: Aiguillage.cpp  Aiguillage.h  main_aiguillage.cpp
MONTRAC/catkin_ws/src/automates/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/automates/msg/: Sorties.msg
MONTRAC/catkin_ws/src/automates/src/: API_schneider.cpp  API_schneider.h  automates.cpp
MONTRAC/catkin_ws/src/commande/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/commande/msg/: Actionneurs.msg
MONTRAC/catkin_ws/src/commande/src/: AigsInterface.cpp  AigsInterface.h  RobotsInterface.cpp  RobotsInterface.h  actionneurs.cpp  actionneurs.h  capteurs.cpp  capteurs.h  commande.cpp  commande.h  communication_baxter.cpp  communication_baxter.h  main_commande.cpp
MONTRAC/catkin_ws/src/commande_locale/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/commande_locale/msg/: Capteurs.msg  DeplacerPieceMsg.msg  Msg_AddProduct.msg  Msg_Color.msg  Msg_PinControl.msg  Msg_StopControl.msg  Msg_SwitchControl.msg  RobotJoints.msg  TacheFinieMsg.msg
MONTRAC/catkin_ws/src/commande_locale/src/: LogManager.cpp  UI.h  commande_locale.cpp  display.cpp  inOutController.cpp  inOutController.h  vrepController.cpp  vrepController.h
MONTRAC/catkin_ws/src/commande_locale/src/non_utilise/: UI.cpp  UI.h
MONTRAC/catkin_ws/src/commande_locale/srv/: SrvAddProduct.srv  SrvAddProductPushBack.srv
MONTRAC/catkin_ws/src/communication/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/communication/src/: communication.cpp  communication_API_schneider.h  communication_commande.h  main_communication.cpp
MONTRAC/catkin_ws/src/launcher/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/planificateur/: CMakeLists.txt
MONTRAC/catkin_ws/src/plc_in/: CMakeLists.txt
MONTRAC/catkin_ws/src/plc_out/: package.xml
MONTRAC/catkin_ws/src/plc_out/src/: plc_config_actuators.h
MONTRAC/catkin_ws/src/robots/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/robots/launch/: robotsDroite.launch  robotsGauche.launch
MONTRAC/catkin_ws/src/robots/msg/: FaireTacheMsg.msg  MoveRobot.msg  Msg_numrobot.msg
MONTRAC/catkin_ws/src/robots/src/: Poste.cpp  Poste.h  Robot.cpp  Robot.h  main_robot.cpp
MONTRAC/catkin_ws/src/shuttles/: CMakeLists.txt  package.xml
MONTRAC/catkin_ws/src/shuttles/msg/: Msg_Erreur.msg  msgShuttleChange.msg  msgShuttleCreate.msg
MONTRAC/catkin_ws/src/shuttles/src/: FileAttente.cpp  FileAttente.h  capteurs.cpp  capteurs.h  main_ShuttleManager.cpp
MONTRAC/catkin_ws/src/shuttles/srv/: shuttle_id.srv
MONTRAC/catkin_ws/src/vrep_common/: CMakeLists.txt
version_ahmed/catkin_ws/devel/: .catkin  .rosinstall  _catkin  _rosinstall  _setup_util.py  setup.sh
version_ahmed/catkin_ws/install/: _rosinstall  _setup_util.py  setup.sh
version_ahmed/catkin_ws/install/share/commande_locale/: package.xml
version_ahmed/catkin_ws/install/share/commande_locale/cmake/: commande_localeConfig.cmake
version_ahmed/catkin_ws/install/share/commande_locale/msg/: Msg_SensorState.msg
version_ahmed/catkin_ws/src/automates/: CMakeLists.txt
version_ahmed/catkin_ws/src/automates/msg/: Entrees.msg
version_ahmed/catkin_ws/src/automates/src/: API_schneider.cpp  API_schneider.h  automates.cpp
version_ahmed/catkin_ws/src/commande/: CMakeLists.txt  package.xml
version_ahmed/catkin_ws/src/commande/src/: actionneurs.h  capteurs.cpp  capteurs.h  commande.cpp  main_commande.cpp
version_ahmed/catkin_ws/src/commande_locale/: CMakeLists.txt
version_ahmed/catkin_ws/src/commande_locale/msg/: Msg_StopControl.msg
version_ahmed/catkin_ws/src/commande_locale/src/: UI.cpp  inOutController.h  vrepController.cpp
version_ahmed/catkin_ws/src/commande_plc/: CMakeLists.txt  package.xml
version_ahmed/catkin_ws/src/commande_plc/msg/: actuators.msg  sensors.msg
version_ahmed/catkin_ws/src/commande_plc/src/: commande_plc.cpp
version_ahmed/catkin_ws/src/communication/: CMakeLists.txt  package.xml
version_ahmed/catkin_ws/src/communication/src/: communication.cpp  communication_API_schneider.h  communication_commande.h  main_communication.cpp
version_ahmed/catkin_ws/src/planificateur/: CMakeLists.txt  package.xml
version_ahmed/catkin_ws/src/planificateur/src/: sensorState.cpp  sensorState.h  stopState.cpp  switchState.cpp  switchState.h
version_ahmed/catkin_ws/src/plc_in/: CMakeLists.txt  package.xml
version_ahmed/catkin_ws/src/plc_in/src/: plc_config_sensors.cpp  plc_in_client.cpp  plc_in_server.cpp
version_ahmed/catkin_ws/src/plc_out/: CMakeLists.txt
version_ahmed/catkin_ws/src/plc_out/src/: plc_config_actuators.cpp  plc_config_actuators.h  plc_out_client.cpp  plc_out_server.cpp
version_ahmed/catkin_ws/src/plc_out/srv/: outputs.srv
(+807 files in other folders)
