<?xml version="1.0"?>
<package format="2">
  <name>plc_out</name>
  <version>0.0.0</version>
  <description>The plc_out package</description>

  <maintainer email="ahmed.limem@etudiant-enit.utm.tn">Ahmed LIMEM</maintainer>

  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--   add this for generation code -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--   add this for running code-->
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
