<?xml version="1.0"?>
<package>
  <name>shuttles</name>
  <version>0.0.0</version>
  <description>The shuttles package</description>
  <maintainer email="projetlongAIP@gmail.com">Projet long ENSEEIHT</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>message_generation</build_depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>aiguillages</build_depend>
  <run_depend>aiguillages</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_runtime</run_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
